k8s/colepago-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colepago-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
  - hosts:
    - drsrv.drsrv.net.ar
    secretName: colepago-tls
  rules:
  - host: drsrv.drsrv.net.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: colepago-service
            port:
              number: 80
