k8s/colepago-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colepago-web-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: colepago-web.drsrv.net.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: colepago-service
            port:
              number: 80
  tls:
  - hosts:
    - colepago-web.drsrv.net.ar
    secretName: colepago-web-drsrv-tls
